--- a/f22.markdown
+++ b/f22.markdown
@@ -83,12 +83,12 @@ Please link to the course website (defi-learning.org) in your article and submit
 <!--
 ## Fireside chat series: the Future of DeFi
 
-<iframe id="fireside" src="https://berkeley-defi.github.io/f21_fireside" width="100%" height="1400" frameborder=0> </iframe>
+<iframe id="fireside" src="https://rdi.berkeley.edu/berkeley-defi/f22_fireside" width="100%" height="1400" frameborder=0> </iframe>
 -->
 
 ## Syllabus (subject to change)
 
-<iframe id="syllabus" src="https://berkeley-defi.github.io/f22_syllabus" width="100%" height="700" frameborder=0> </iframe>
+<iframe id="syllabus" src="https://rdi.berkeley.edu/berkeley-defi/f22_syllabus" width="100%" height="700" frameborder=0> </iframe>
 
 ## Course Work
 - Weekly quizzes
