--- a/f22.markdown
+++ b/f22.markdown
@@ -49,7 +49,8 @@ Synchronous lecture: 10:30am-12:30pm PT Thu, starting Aug 26; or follow online a
 -->
 
 ## Enrollment and Participation
-To get more information about the course, please join this Google Group: [defi-mooc-f22@googlegroups.com](https://groups.google.com/g/defi-mooc-f22). To help us learn more about the background of the students, please fill in [this form](https://docs.google.com/forms/d/e/1FAIpQLSc_2wP7x2PwS5fngY-USSYJWRNMIxAPVP9okTW6GFfCxRbCTA/viewform).
+- To sign up for the course, please fill in [this form](https://docs.google.com/forms/d/e/1FAIpQLSc_2wP7x2PwS5fngY-USSYJWRNMIxAPVP9okTW6GFfCxRbCTA/viewform).
+- For  more information about the course, please also join [defi-mooc-f22@googlegroups.com](https://groups.google.com/g/defi-mooc-f22). And stay tuned!
 
 <!--
 ## DeFi MOOC NFT (subject to change)
