--- a/f22.markdown
+++ b/f22.markdown
@@ -9,7 +9,10 @@ layout: f22
   - Passcode: 267548
 - [Calendar](https://calendar.google.com/calendar/u/0?cid=ZGVmaS5tb29jQGdtYWlsLmNvbQ)
 -->
+- To sign up for the course, please fill in [this form](https://docs.google.com/forms/d/e/1FAIpQLSc_2wP7x2PwS5fngY-USSYJWRNMIxAPVP9okTW6GFfCxRbCTA/viewform).
+- For  more information about the course, please also join [defi-mooc-f22@googlegroups.com](https://groups.google.com/g/defi-mooc-f22). And stay tuned!
 - For general course content related questions, please join our [discord](https://discord.gg/3yFqmRjZDA).
+
 ## Instructors
 
 <table style="table-layout: fixed; font-size: 88%;">
@@ -48,9 +51,7 @@ layout: f22
 Synchronous lecture: 10:30am-12:30pm PT Thu, starting Aug 26; or follow online asynchronously with video lectures
 -->
 
-## Enrollment and Participation
-- To sign up for the course, please fill in [this form](https://docs.google.com/forms/d/e/1FAIpQLSc_2wP7x2PwS5fngY-USSYJWRNMIxAPVP9okTW6GFfCxRbCTA/viewform).
-- For  more information about the course, please also join [defi-mooc-f22@googlegroups.com](https://groups.google.com/g/defi-mooc-f22). And stay tuned!
+<!-- ## Enrollment and Participation -->
 
 <!--
 ## DeFi MOOC NFT (subject to change)
