--- a/f22.markdown
+++ b/f22.markdown
@@ -73,7 +73,7 @@ All quizzes are released in parallel with (or shortly after) the corresponding l
 | Group formation       | 8/30      | 9/12
 | Project proposal      | 9/13      | 10/03
 | Assignment 1 ([Link](https://docs.google.com/forms/d/e/1FAIpQLSc7UgNu8uKGGoDHkCTqF_gX9Ej0TnMILeVkvRUcShmpj5B8Gw/viewform)) | 10/04     | 10/10
-| Assignment 2 ([Link](https://docs.google.com/forms/d/e/1FAIpQLSetlVx15TKrOk_aP28eFnU4K2wXEjlJZeDj1TdEnmh-GJlbZw/viewform)) | 10/18     | 10/24
+| Assignment 2 ([Link](https://docs.google.com/forms/d/e/1FAIpQLSetlVx15TKrOk_aP28eFnU4K2wXEjlJZeDj1TdEnmh-GJlbZw/viewform)) | 10/18     | <s>10/24</s> <span style="color:red">11/07</span>
 | Project milestone     | 10/25     | 10/31
 | Lab 1                 | 11/01     | 11/07
 | Lab 2                 | 11/08     | 11/21
